End of section 8

--- a/client/documentation/coverage.html
+++ b/client/documentation/coverage.html
@@ -70,10 +70,58 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/NotFoundComponent.html">src/app/_errors/not-found/not-found.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>NotFoundComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ServerErrorComponent.html">src/app/_errors/server-error/server-error.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ServerErrorComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TestErrorsComponent.html">src/app/_errors/test-errors/test-errors.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TestErrorsComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/10)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./guards/AuthGuard.html">src/app/_guards/auth.guard.ts</a>
             </td>
             <td>guard</td>
             <td>AuthGuard</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interceptors/ErrorInterceptor.html">src/app/_interceptors/error.interceptor.ts</a>
+            </td>
+            <td>interceptor</td>
+            <td>ErrorInterceptor</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/3)</span>
