--- a/client/documentation/modules/SharedModule.html
+++ b/client/documentation/modules/SharedModule.html
@@ -72,7 +72,7 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgModule } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgModule, Pipe } from &#x27;@angular/core&#x27;;
 import { CommonModule } from &#x27;@angular/common&#x27;;
 import { BsDropdownModule } from &#x27;ngx-bootstrap/dropdown&#x27;;
 import { ToastrModule } from &#x27;ngx-toastr&#x27;;
